<?xml version="1.0"?>
<package>
  <name>ur5_state_server</name>
  <version>0.0.0</version>
  <description>ur5_state_server package</description>

  <maintainer email="matyas.takacs@irob.uni-obuda.hu">Matyas Takacs</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="matyas.takacs@irob.uni-obuda.hu">Matyas Takacs</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>
